--- a/index.html
+++ b/index.html
@@ -10,27 +10,51 @@ body {
   margin: 0;
   background: #111;
   color: white;
-  text-align: center;
   font-family: Arial;
+  overflow: hidden;
 }
+
 canvas {
   display: block;
   background: #222;
   touch-action: none;
 }
-button {
-  font-size: 16px;
-  padding: 10px 14px;
-  border: none;
-  border-radius: 8px;
-}
+
+/* ALT BUTONLAR */
 #ui {
   position: fixed;
-  bottom: 10px;
+  bottom: 14px;
+  left: 0;
+  right: 0;
+  pointer-events: none;
+}
+.ui-btn {
+  pointer-events: auto;
+  position: absolute;
+  bottom: 0;
+  background: rgba(0,0,0,0.6);
+  color: white;
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 10px 14px;
+  font-size: 15px;
+}
+#frictionBtn { left: 14px; }
+#fullscreenBtn { right: 14px; }
+
+/* ÜST BUTON */
+#pauseBtn {
+  position: fixed;
+  top: 12px;
   left: 50%;
   transform: translateX(-50%);
-  display: flex;
-  gap: 10px;
+  background: rgba(0,0,0,0.6);
+  color: white;
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 8px 14px;
+  font-size: 15px;
+  z-index: 10;
 }
 </style>
 </head>
@@ -39,38 +63,42 @@ button {
 
 <canvas id="game"></canvas>
 
+<button id="pauseBtn">⏸️ Durdur</button>
+
 <div id="ui">
-  <button id="frictionBtn">🧲 Sürtünme: KAPALI</button>
-  <button id="fullscreenBtn">⛶ Tam Ekran</button>
+  <button id="frictionBtn" class="ui-btn">🧲 Sürtünme: KAPALI</button>
+  <button id="fullscreenBtn" class="ui-btn">⛶ Tam Ekran</button>
 </div>
 
 <script>
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
-// 📱 TAM EKRAN CANVAS
+/* EKRAN */
 function resize() {
   canvas.width = window.innerWidth;
   canvas.height = window.innerHeight;
+  updateOrigin();
 }
-resize();
 window.addEventListener("resize", resize);
+resize();
 
-// ⚙️ FİZİK
+/* FİZİK */
 const g = 0.015;
 let frictionOn = false;
-let friction = 0.995;
+const friction = 0.995;
 
 let angle = Math.PI / 6;
 let speed = 0;
 let dragging = false;
+let paused = false;
 
-// 🔢 ENERJİ
+/* ENERJİ */
 const TOTAL = 100;
 let shownPot = 50;
 let shownKin = 50;
 
-// 📍 MERKEZ
+/* MERKEZ */
 let L, origin;
 function updateOrigin() {
   L = canvas.height * 0.45;
@@ -79,12 +107,11 @@ function updateOrigin() {
     y: canvas.height * 0.18
   };
 }
-updateOrigin();
 
-// 👆 DOKUNMA
+/* DOKUNMA */
 canvas.addEventListener("touchstart", () => dragging = true);
 canvas.addEventListener("touchmove", e => {
-  if (!dragging) return;
+  if (!dragging || paused) return;
   const t = e.touches[0];
   const r = canvas.getBoundingClientRect();
   const x = t.clientX - r.left - origin.x;
@@ -94,7 +121,7 @@ canvas.addEventListener("touchmove", e => {
 });
 canvas.addEventListener("touchend", () => dragging = false);
 
-// 🧲 SÜRTÜNME BUTONU
+/* BUTONLAR */
 const frictionBtn = document.getElementById("frictionBtn");
 frictionBtn.onclick = () => {
   frictionOn = !frictionOn;
@@ -103,7 +130,6 @@ frictionBtn.onclick = () => {
     : "🧲 Sürtünme: KAPALI";
 };
 
-// ⛶ TAM EKRAN BUTONU
 document.getElementById("fullscreenBtn").onclick = () => {
   if (!document.fullscreenElement) {
     document.documentElement.requestFullscreen();
@@ -112,8 +138,16 @@ document.getElementById("fullscreenBtn").onclick = () => {
   }
 };
 
-// 🔄 GÜNCELLEME
+const pauseBtn = document.getElementById("pauseBtn");
+pauseBtn.onclick = () => {
+  paused = !paused;
+  pauseBtn.textContent = paused ? "▶️ Devam" : "⏸️ Durdur";
+};
+
+/* GÜNCELLEME */
 function update() {
+  if (paused) return;
+
   if (!dragging) {
     speed += -g * Math.sin(angle);
     speed *= frictionOn ? friction : 1;
@@ -121,7 +155,7 @@ function update() {
   }
 }
 
-// 📊 BAR
+/* ENERJİ BAR */
 function drawBar(x, y, value, color, label) {
   const w = 220;
   const h = 18;
@@ -137,7 +171,7 @@ function drawBar(x, y, value, color, label) {
   ctx.fillText(label + ": " + value.toFixed(0), x, y - 4);
 }
 
-// 🎨 ÇİZİM
+/* ÇİZİM */
 function draw() {
   ctx.clearRect(0, 0, canvas.width, canvas.height);
 
@@ -167,7 +201,6 @@ function draw() {
   shownPot += (realPot - shownPot) * smooth;
   shownKin += (realKin - shownKin) * smooth;
 
-  // barlar
   drawBar(20, canvas.height - 100, shownPot, "#3498db", "Potansiyel");
   drawBar(20, canvas.height - 65, shownKin, "#e74c3c", "Kinetik");
 
@@ -176,7 +209,7 @@ function draw() {
   ctx.fillText("Toplam Enerji: 100", 20, canvas.height - 130);
 }
 
-// ▶️ OYUN DÖNGÜSÜ
+/* OYUN DÖNGÜSÜ */
 function loop() {
   update();
   draw();
